@@ -1,31 +1,0 @@
-# .pmtignore is required to mask symlinks from the `puppet module build` test
-# In the module's pipeline sanity checks
-# ------------------------------------------------------------------------------
-#         NOTICE: **This file is maintained with puppetsync**
-#
-# This file is automatically updated as part of a puppet module baseline.
-# The next baseline sync will overwrite any local changes made to this file.
-# ------------------------------------------------------------------------------
-.*.sw?
-.bundle/
-.git/
-.github/
-.gitlab-ci.yml
-.rspec_system
-.vagrant/
-.vendor/
-.yardoc
-dist/
-doc/
-Gemfile.lock
-junit/
-log/
-pkg/
-spec/acceptance/
-spec/defines/
-spec/fixtures/
-spec/rp_env/
-!/spec/fixtures/site.pp
-!/spec/hieradata/default.yaml
-tests/
-vendor/
